add ability to group plugins on menus and toolbars

--- a/plugin_templates/toolbutton_with_dialog/template/module_name.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name.tmpl
@@ -21,9 +21,11 @@
  ***************************************************************************/
 """
 from PyQt4.QtCore import QSettings, QTranslator, qVersion, QCoreApplication
-from PyQt4.QtGui import QAction, QIcon
+from PyQt4.QtGui import QAction, QIcon, QToolBar
+
 # Initialize Qt resources from file resources.py
 import resources
+
 # Import the code for the dialog
 from ${TemplateModuleName}_dialog import ${TemplateClass}Dialog
 import os.path
@@ -63,10 +65,22 @@ class ${TemplateClass}:
 
         # Declare instance attributes
         self.actions = []
-        self.menu = self.tr(u'&${TemplateTitle}')
-        # TODO: We are going to let the user set this up in a future iteration
-        self.toolbar = self.iface.addToolBar(u'${TemplateClass}')
-        self.toolbar.setObjectName(u'${TemplateClass}')
+
+        # The groupName statement is created from a template in PluginBuilder
+        # from user input. If no group name is entered the left side of
+        # the 'or' will be an empty string
+        groupName = u'${TemplateGroupName}' or u'${TemplateTitle}'
+
+        self.menu = self.tr(groupName)
+        self.toolbar = self.iface.mainWindow().findChild(QToolBar, groupName)
+        if not self.toolbar:
+            self.toolbar = self.iface.addToolBar(groupName)
+            self.toolbar.setObjectName(groupName)
+
+            # set toolbar color (light blue #ADD8E6 173,216,230)
+            # NOTE: color set in 1st plugin of the group loaded will be used
+            self.toolbar.setStyleSheet("QToolBar{background-color:#ADD8E6; border: 0px solid black}")
+
 
     # noinspection PyMethodMayBeStatic
     def tr(self, message):
