--- a/plugin_templates/toolbutton_with_dialog/wizard_form_base.ui
+++ b/plugin_templates/toolbutton_with_dialog/wizard_form_base.ui
@@ -6,11 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>699</width>
-    <height>153</height>
+    <width>474</width>
+    <height>216</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="3" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>30</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="menu_label">
      <property name="minimumSize">
@@ -65,28 +78,24 @@
      </item>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="menu_text_label">
-     <property name="minimumSize">
-      <size>
-       <width>150</width>
-       <height>0</height>
-      </size>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="group_name">
+     <property name="toolTip">
+      <string>This is the text that will appear as a sub-menu in the menu  e.g. Photo plugins.
+ Plugins with the same Group will be grouped together in a sub-menu and/or toolbar.</string>
      </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>16777215</height>
-      </size>
+     <property name="placeholderText">
+      <string>e.g. Photo tools (leave blank for no group)</string>
      </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Text for the menu item</string>
+      <string>Menu/Toolbar Group</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-     <property name="buddy">
-      <cstring>menu_text</cstring>
      </property>
     </widget>
    </item>
@@ -116,18 +125,30 @@ name e.g. Link photos to points.</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
+   <item row="0" column="0">
+    <widget class="QLabel" name="menu_text_label">
+     <property name="minimumSize">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>150</width>
+       <height>0</height>
       </size>
      </property>
-    </spacer>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Text for the menu item</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="buddy">
+      <cstring>menu_text</cstring>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
